<resources>
    <string name="app_name" translatable="false">ToMatoo</string>
    <string name="hello" translatable="false">Hello in</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="example">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="textview" translatable="false">Set your location to start \n find stores around you.</string>
    <string name="phone_example" translatable="false">0123456789</string>
    <string name="signin">Sign In</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="signup">Sign Up</string>
    <string name="use_current_location">Use current location</string>
    <string name="send">Send</string>
    <string name="or">Or</string>
    <string name="set_location">Set Location</string>
    <string name="country">Country:</string>
    <string name="country_hint">country</string>
    <string name="city">City:</string>
    <string name="city_hint">city</string>
    <string name="area">Area:</string>
    <string name="profil">Profile</string>
    <string name="cart">My Cart</string>
    <string name="logout">Log Out</string>
    <string name="user_name">Username</string>
    <string name="wishlist">My Wishlist</string>
    <string name="comaprelist">My Compare List</string>
    <string name="orders">My Orders</string>
    <string name="notification">Notifications</string>
    <string name="setting">Setting</string>
    <string name="about_app">About App</string>
    <string name="address">Address:</string>
    <string name="how_to_use">How to Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="area_hint">area</string>
    <string name="building">Building:</string>
    <string name="building_hint">building</string>
    <string name="location_example">Streat, Area, Country, City</string>
    <string name="current_location">Current Location:</string>
    <string name="location_manually">Set your location manually</string>
    <string name="entercode">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="categories">Categories</string>
    <string name="see_all">see all</string>
    <string name="featured_products">Featured Products</string>
    <string name="newpassword">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_and_login">Reset And Sign In</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="continue_without_login">Continue without Sign In</string>
    <string name="title_activity_set_location">Map</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page" translatable="false">MainPageActivity</string>
    <string name="search">Search</string>
    <string name="item_price" translatable="false">3</string>
    <string name="item_name">Apple</string>
    <string name="sort_by">Sort By:</string>
    <string name="sort_high_price">High Price</string>
    <string name="sort_low_price">Low Price</string>
    <string name="sort_high_rate">High Rate</string>
    <string name="sort_low_rate">Low Rate</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="wishlist_products">Wishlist Products</string>
    <string name="filter_by">Filter By:</string>
    <string name="item_type">Fruits</string>
    <string name="description">Description:</string>
    <string name="description_txt">hello .there uss cfkznxgtdsjxcbnbdssghhjxbnbzxfczfhdhbbd</string>
    <string name="quantity">Product Quantity</string>
    <string name="total_price">Total Price:</string>
    <string name="total_price_value" translatable="false">40</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity_value" translatable="false">1</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_free">Delivery Free:</string>
    <string name="delivery_free_value" translatable="false">1$</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_data">Confirm Data</string>
    <string name="notes">Notes</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="delivery_date_value_txV">Sundany 10 May,2019</string>
    <string name="payment_method">Payment Method:</string>
    <string name="payment_method_value">Paypal</string>
    <string name="order">Order:</string>
    <string name="add_discount_code">Add Discount Code:</string>
    <string name="discount">Discount</string>
    <string name="confirm_order">Confirm Data</string>
    <string name="sucess">Sucess</string>
    <string name="sucess_value">Thank you for shopping from Tomato</string>
    <string name="back_to_shop">Back to shop</string>
    <string name="track_order">Track Order</string>
    <string name="discount_value" translatable="false">0$</string>
    <string name="expire_date">Expire Date:</string>
    <string name="card_numer">Card Number:</string>
    <string name="payment_wallet">Wallet</string>
    <string name="payment_cash_on_delivery">Cash on Delivery</string>
    <string name="payment_online_credit">Online by Credit Card</string>
    <string name="wallet_balance_value">1200 $</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_balance">My balance</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="recharge_by">Recharge By:</string>
    <string name="credit_card">Credit Card</string>
    <string name="amount_value" translatable="false">1000</string>
    <string name="amount">Amount:</string>
    <string name="recharge">Recharge</string>
    <string name="currency_type">USA $</string>
    <string name="set_your_location_toStart">Set Your Location To Start</string>
    <string name="find_stores_around_you">find stores around you</string>
    <string name="delivery_address_toolbar">Delivery Address</string>
    <string name="notification_info">Your order has been processed .</string>
    <string name="order_number_value">Order number ...:#1234567</string>
    <string name="notification_time">2 min ago.</string>
    <string name="my_oder">My Order</string>
    <string name="process_tab">Process</string>
    <string name="onway_tab">On Way</string>
    <string name="completed_tab">Completed</string>
    <string name="order_time_value">31 March 2019-10.00 AM</string>
    <string name="received_order">Received Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="return_order">Return Order</string>
    <string name="cost">Cost:</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="estimated_time_value">15 minutes</string>
    <string name="delivery_address_value">Street,Area,Country,City.</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="reason_of_cancell">Reason for cancellation?</string>
    <string name="reason_of_cancell_value">Write here the reasons...</string>
    <string name="add_review">Add Review</string>
    <string name="delivery_man_name">Delivery Man</string>
    <string name="review_value">Write here a review ....</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="report_problem">Report a problem</string>
    <string name="send_suggestion">Send a suggestion</string>
    <string name="write_suggestion">Write your suggestion:</string>
    <string name="suggest_value">Write here what you suggest...</string>
    <string name="website_value" translatable="false">www.company.com</string>
    <string name="email_value" translatable="false">example@gmail.com</string>
    <string name="report_problem_about">Report a problem about...</string>
    <string name="report">Report</string>
    <string name="item_price_currency" translatable="false">$ /Kg</string>
    <string name="item_price_curr">$</string>
    <string name="wallet">Wallet</string>
    <string name="password_2">Password:</string>
    <string name="old_password">Old Password</string>
    <string name="save">Save</string>
    <string name="info">Credit Card information</string>
    <string name="cvv">CVV:</string>
    <string name="card_holder_name">Card Holder Name:</string>
    <string name="card_info">Save Card Information</string>
    <string name="english">English</string>
    <string name="language">Language:</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="balance">My Balance</string>
    <string name="delete">Delete</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="about_us">About Us</string>
    <string name="write_details_app">Wrire here some details about the App...</string>
    <string name="steps_of_app">Steps of how to use App:</string>
    <string name="step1" translatable="false">1-</string>
    <string name="step2" translatable="false">2-</string>
    <string name="step3" translatable="false">3-</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_delivery_address">Map</string>
    <string name="my_compare_list">My Compare List</string>
    <string name="compare_by">Compare By:</string>
    <string name="error_connection">Error Internet Connection</string>
    <string name="pass_is_weak">كلمة المرور ضعيفة</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="enter_valid_email">برجاء ادخال بريد الكترونى صحيح</string>
    <string name="pass_not_equal">كلمتى المرور غير متطابقتين</string>
    <string name="logining">جارى الدخول</string>
    <string name="signing">جارى التسجيل</string>
    <string name="sending">جارى الارسال</string>
    <string name="get_location_success">تم تحديد موقعك بنجاح</string>
    <string name="loading">جارى التحميل</string>
    <string name="action_Cart">السلة</string>
    <string name="action_filter">الفلتر</string>
    <string name="prof_address">Address:</string>
    <string name="address_val">Street, City, Country</string>
    <string name="payment_val">CreditCard</string>
    <string name="prof_password">Password:</string>
    <string name="pass_val" translatable="false">********</string>
    <string name="updating">جارى النعديل</string>
    <string name="no_available_products">No Available Products</string>
    <string name="dismiss">الغاء</string>
    <string name="yes">موافق</string>
    <string name="delete_this_Item">هل تريد حذف هذا العنصر ؟</string>
    <string name="order_Num">Order No </string>
    <string name="on_way">OnWay</string>
    <string name="no_waiting_orders">No Waiting Orders</string>
    <string name="no_completed_orders">No Completed Orders</string>
    <string name="delivery_Address">Delivery Address:</string>
    <string name="estimate_time">Estimated Time:</string>
    <string name="order_name">Order Name</string>
    <string name="my_notifications">Notifications</string>
    <string name="see_more">See More</string>
    <string name="no_available_orders">No Available Orders</string>
    <string name="done">Done</string>
</resources>