<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/sidemenu_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/nav_comparelist"
            android:icon="@drawable/sidemenu_reviews"
            android:title="@string/comaprelist" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_aboutapp"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/how_to_use" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact_us" />
    </group>
</menu>
