<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/map_search"
        android:drawableStart="@drawable/map_search"
        android:drawablePadding="12dp"
        android:hint="@string/search"
        android:inputType="text"
        android:lines="1"
        android:paddingEnd="40dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toStartOf="@string/search"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/map"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:paddingLeft="20dp"
        android:paddingRight="40dp" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        map:layout_constraintTop_toBottomOf="@+id/search"
        map:layout_constraintBottom_toTopOf="@+id/current_location"
        tools:context=".Location.SetLocationActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="54dp" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/app_bar_layout">
        </include>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp" />
    <ImageButton
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_address"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@id/current_location"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/location_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_example"
        app:layout_constraintTop_toBottomOf="@id/current_location"
        app:layout_constraintStart_toEndOf="@id/icon"
        android:textSize="17dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="15dp">
    </TextView>
    android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="15dp">
    </TextView>

    <TextView
        android:id="@+id/country_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintTop_toBottomOf="@id/country_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        app:layout_constraintTop_toBottomOf="@id/city_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/building_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/building"
        app:layout_constraintTop_toBottomOf="@id/area"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/country_et"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/country_hint"
        android:layout_marginLeft="100dp"
        android:inputType="text"
        android:lines="1"
        android:layout_marginRight="20dp" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/city_et"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/country_et"
        app:layout_constraintBottom_toTopOf="@id/area_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/city_hint"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/area_et"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/city_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:inputType="text"
        android:lines="1"
        android:layout_marginEnd="20dp"
        android:hint="@string/area_hint"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/building_et"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/area_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/building_hint"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp" />
    <Button
        android:id="@+id/set_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        android:background="@color/bgreen"
        android:textAllCaps="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/building_tv"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp" />

</android.support.constraint.ConstraintLayout>