<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border"
    android:padding="15dp"
    android:layout_margin="10dp">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/process_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/process_icon_img"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/process_icon_img"
        app:layout_constraintStart_toEndOf="@id/process_icon_img"
        android:layout_marginStart="15dp"
        android:text="@string/order_number_value"
        android:id="@+id/order_number_txtV"
        android:textColor="@color/black"
        android:textSize="14sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_number_txtV"
        app:layout_constraintStart_toEndOf="@id/process_icon_img"
        android:layout_marginStart="15dp"
        android:text="@string/order_time_value"
        android:id="@+id/order_time_txtV"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_time_txtV"
        app:layout_constraintStart_toEndOf="@id/process_icon_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/process_tab"
        android:id="@+id/process"
        android:textColor="@color/bgreen"
        android:textSize="14sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/notification_time"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/received_order"
        android:id="@+id/received_order_btn"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/received_order_btn"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/cancel_order"
       android:id="@+id/cancel_order_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>




</android.support.constraint.ConstraintLayout>