<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/border">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/completed_icon_img"
        android:src="@drawable/completed_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/completed_icon_img"
        app:layout_constraintStart_toEndOf="@id/completed_icon_img"
        android:layout_marginStart="15dp"
        android:text="@string/order_number_value"
        android:id="@+id/order_number_txtV"
        android:textColor="@color/black"
        android:textSize="14sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_number_txtV"
        app:layout_constraintStart_toEndOf="@id/completed_icon_img"
        android:layout_marginStart="15dp"
        android:text="@string/order_time_value"
        android:id="@+id/order_time_txtV"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_time_txtV"
        app:layout_constraintStart_toEndOf="@id/completed_icon_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/completed_tab"
        android:id="@+id/completed"
        android:textColor="@color/bgreen"
        android:textSize="14sp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completed"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/return_order"
        android:id="@+id/return_order_btn"
        android:layout_marginTop="15dp"/>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/notification_time"
        android:id="@+id/completed_time_txtV"
        />



</android.support.constraint.ConstraintLayout>